@@ -8,7 +8,11 @@
 
 TOPDIR="@abs_top_srcdir@"
 export DATABASE="pgsql"
-source ${TOPDIR}/bin/dbt2_profile || exit
+if [ -f "${HOME}/.dbt2_profile" ]; then
+	source ${HOME}/.dbt2_profile || exit 1
+else
+	source ${TOPDIR}/bin/dbt2_profile || exit 1
+fi
 
 # Double check we have a value for PGDATA
 if [ -z ${PGDATA} ] ; then
