@@ -17,7 +17,11 @@ explain() {
 
 TOPDIR="@abs_top_srcdir@"
 export DATABASE="pgsql"
-source ${TOPDIR}/bin/dbt2_profile || exit 1
+if [ -f "${HOME}/.dbt2_profile" ]; then
+	source ${HOME}/.dbt2_profile || exit 1
+else
+	source ${TOPDIR}/bin/dbt2_profile || exit 1
+fi
 
 while getopts "l:o:" opt; do
 	case ${opt} in
