@@ -35,7 +35,11 @@ install_src()
 TOPDIR="@abs_top_srcdir@"
 PGDIR="${TOPDIR}/bin/pgsql"
 export DATABASE="pgsql"
-source ${TOPDIR}/bin/dbt2_profile || exit 1
+if [ -f "${HOME}/.dbt2_profile" ]; then
+	source ${HOME}/.dbt2_profile || exit 1
+else
+	source ${TOPDIR}/bin/dbt2_profile || exit 1
+fi
 
 export PATH="$PATH:~/bin"
 
